--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,7 @@
         <li class='list'>
         <%= link_to items_path do %>
         <div class='item-img-content'>
-          <%= image_tag item.image.variant(resize: '500x500'), class: "item-img" if item.image.attached? %>
+          <%= image_tag item.image, class: "item-img" %>
 
           <%# <% if item.order.present? %>
             <div class='sold-out'>
