--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,20 +126,20 @@
     <div class="subtitle" >
       新規投稿商品
     </div>
+  <% if @items.present? %>
     <ul class='item-lists'>
-
       <% @items.each do |item| %>
         <li class='list'>
-        <%= link_to item_path(item) do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
-
-          <%# <% if item.order.present? %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
-          <%# <% end %>
-        </div>
+          <%= link_to item_path(item) do %>
+          <div class='item-img-content'>
+            <%= image_tag item.image, class: "item-img" %>
+            <% if item.order.present? %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+            <% end %>
+         </div>
+  <% end %>
         <div class='item-info'>
           <h3 class='item-name'>
             <%= item.item_name %>
